webcert/src/main/webapp/css/inera-webcert.css
/* ... */
.table-qa tr > td.nopadding { padding: 0; }

.marked { color: #ff4565; }

.scrollable {
    overflow-x:auto;
}

.no-padding {
    padding: 0;
}

textarea {
	width: 100%;
	max-width: 500px;
}

th {cursor: default; }

label {
  cursor: default;
}

.pointer-labels label, input[type=radio] + label, input[type=checkbox] + label {
  cursor: pointer;
}

.modal-footer {
  text-align:left;
}

input[datepicker-popup] .btn-block {
	padding: 0;
}

.alert-warning {
  color: #8A6D3B; /* WCAG AA compliant */
}

.alert-danger, .alert-error {
  color: #A94442; /* WCAG AA compliant */
}

.alert-info {
	color: #306E8D; /* WCAG AA compliant */
}

.modal-header h3 {
	padding: 0;
}

.dropdown-menu button.btn-success {
	padding: 2px 10px;
}

/**
 Directive(s) css
**/
.stat-circle {
  background-color: #999;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  border-radius: 50%;
  color: #fff;
  padding: 0px 6px 0px 6px;
  font-size: 10px;
  font-weight: bold;
	position: absolute;
	right: -4px;
	top: -4px;
	text-shadow: none;
	z-index: 3000;
}

.stat-circle-active {
  background-color: #ff4565;
  border-color: #ff4565;
  color: #fff;
}
.wc-spinner {
	text-align: center;
	padding: 20px;
}
.wc-spinner p {
	text-align: center; 
	color: #64ABC0; 
	margin-top: 20px;
}

/**
 Form/validation
**/

span.error { color: orangered; }

.error-icon {
    padding-right: 10px;
}

input:focus:invalid:focus, textarea:focus:invalid:focus, select:focus:invalid:focus {
    border-color: #ccc;
    outline: 0;
    outline: thin dotted \9;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
}

